Calendar grid in tertiary content alignment fix.
Reason doesn't wrap the calendar grid in a #calendar wrapper in the tertiary content, so I added .content-tertiary .events .calendarGrid to the selector that get a float:none;.

--- a/stylesheets/luther2010/master.css
+++ b/stylesheets/luther2010/master.css
@@ -979,7 +979,8 @@ nav.button a:focus {
  width:195px;	
  width:188px;	 
 }
-.content-tertiary .events #calendar {
+.content-tertiary .events #calendar,
+.content-tertiary .events .calendarGrid {
  float:none; 
 }
 .content-tertiary .events h2 {
